# trello-clone-drf

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/: settings.py  urls.py  utils.py  wsgi.py
src/apps/: conftest.py
src/apps/tasks/: __init__.py  api.py  apps.py  models.py  services.py  signals.py
src/apps/tasks/migrations/: 0001_initial.py  0002_auto_20200305_1016.py
src/apps/tasks/tests/: factories.py  test_api.py  test_task_service.py  test_tasks.py
src/apps/users/: api.py  models.py
src/apps/users/migrations/: 0001_initial.py
src/apps/users/tests/: factories.py  test_users.py
